b=478149; Fix up win32/WinCE window style handling; r=dougt